--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ height: auto;
 }
 .flex906{
     display: flex;
-    flex-direction: row;
+    /* flex-direction: row; */
     width: 100% !important;
 }
 .h-64 {
