--- a/src/components/projects/Popup.css
+++ b/src/components/projects/Popup.css
@@ -76,3 +76,14 @@
   position: absolute;
   right: -3rem;
 }
+@media screen and (max-width: 430px){
+  .popup-content {
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, .2);
+      color: #000;
+      padding: 20px 1rem;
+      position: relative;
+      width: 85%;
+  }
+}
