--- a/src/index.css
+++ b/src/index.css
@@ -47,7 +47,7 @@ height: auto;
 }
 .flex906{
     display: flex;
-    /* flex-direction: row; */
+    flex-direction: row;
     width: 100% !important;
 }
 .h-64 {
@@ -72,3 +72,10 @@ border: none !important;
   .flex89{
     display: flex;
   }
+ @media screen and (max-width:768px) {
+    .flex906 {
+        display: flex;
+        flex-direction: column;
+        width: 100% !important;
+    }
+ }
